DRY: By default, reuse NotificationAccumulator's AccumulationFacility for accumulation while suspended.